# creditunder

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROCESSOR_FLOW.md  REQUEST_FLOW.md  alembic.ini  build_tasks.json  credit_underwriting_system_requirement.md  docker-compose.yml  it_discussion.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  1fe5657ce65e_align_schema_with_design_spec.py  9fa2b5c9c2c8_terminal_state_fks_audit_partitioning.py  a3c7e1d2f0b9_remove_employer_rule_version.py  c1a3d8e2f4b7_correlation_id_and_rule_version_stamps.py  d9e3f1a2b5c8_drop_edw_staging.py  e5b2f9a1c3d7_drop_correlation_id.py  f2a1e3d4b5c6_readd_edw_staging.py
mockups/crm/: Dockerfile  app.py  publisher.py  pyproject.toml  sample_data.py
mockups/dms/: Dockerfile  app.py  pyproject.toml
mockups/edw/: Dockerfile  app.py  pyproject.toml
postgres/init/: 01_replication.sh
postgres/replica/: entrypoint.sh
src/creditunder/: Dockerfile  __main__.py  config.py  entrypoint.sh  observability.py  otel_observability.py  pyproject.toml  validation_config.py  validation_config.yaml  workbench.Dockerfile
src/creditunder/db/: models.py  session.py
src/creditunder/documents/: __init__.py  base.py  id_document.py  salary_certificate.py
src/creditunder/domain/: enums.py  models.py
src/creditunder/handlers/: base.py  personal_finance.py  registry.py
src/creditunder/pipeline/: processor.py  report_generator.py
src/creditunder/pipeline/templates/: report.html
src/creditunder/services/: ai_client.py  dms_client.py  edw_client.py
src/creditunder/workbench/: app.py
src/workbench/: Dockerfile  auth.py  config.py  db.py  main.py  schemas.py
src/workbench-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/workbench-ui/src/: App.vue  api.ts  style.css  userStore.ts
src/workbench-ui/src/components/: CaseDetails.vue  (+4 more)
src/workbench/routers/: cases.py  demo.py
