[project]
name = "creditunder"
version = "0.1.0"
description = "AI Credit Underwriting Platform - Alinma Bank"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.11.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "openai>=1.30.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.0",
    "sse-starlette>=3.4.1",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.29.0",
    "weasyprint>=62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creditunder"]

[tool.uv]
dev-dependencies = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
